--- a/.github/workflows/update-date.yml
+++ b/.github/workflows/update-date.yml
@@ -3,13 +3,13 @@ on:
   # https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows#schedule
   schedule:
     # The shortest interval you can run scheduled workflows is once every 5 minutes.
-    # Note: The schedule event can be delayed during periods of high loads of GitHub Actions workflow runs. 
+    # Note: The scheduled event can be delayed during periods of high loads of GitHub Actions workflow runs. 
     # High load times include the start of every hour. 
     # To decrease the chance of delay, schedule your workflow to run at a different time of the hour.
     # Every 5 minutes.
     # - cron: '*/5 * * * *'
     # At the beginning of every day.
-    - cron: "0 23 * * *"
+    - cron: "0 21 * * *"
 
 # on: [push]
 
@@ -23,7 +23,7 @@ jobs:
       - name: Modify date and time
         run: |
           now=$(date)
-          echo "$now - Let's start coding: Array" > README.md
+          echo "$now - TODO: Data Structure and Algorithm - Array, Paper with coding - CRNN" > README.md
           cat README.md
       - name: Push to repository
         run: |
